--- a/Show_variable.yml
+++ b/Show_variable.yml
@@ -2,7 +2,8 @@
 - name: Print Enviromental variables 
   hosts: all
   become_user: root
-  msg:
-  - "api_cert: {{ lookup('env', 'PUBLIC_CERT') }}"
-  - "private_key: {{ lookup('env', 'PRIVATE_KEY') }}"
+  debug:
+    msg:
+    - "api_cert: {{ lookup('env', 'PUBLIC_CERT') }}"
+    - "private_key: {{ lookup('env', 'PRIVATE_KEY') }}"
   delegate_to: local  
