--- a/Show_variable.yml
+++ b/Show_variable.yml
@@ -2,8 +2,9 @@
 - name: Print Enviromental variables 
   hosts: all
   become_user: root
-  debug:
+
+  ansible.builtin.debug:
     msg:
     - "api_cert: {{ lookup('env', 'PUBLIC_CERT') }}"
     - "private_key: {{ lookup('env', 'PRIVATE_KEY') }}"
-  delegate_to: local  
+   
