--- a/Show_variable.yml
+++ b/Show_variable.yml
@@ -1,10 +1,11 @@
 ---
 - name: Print Enviromental variables 
-  hosts: all
+  hosts: localhost 
   become_user: root
 
-  ansible.builtin.debug:
-    msg:
-    - "api_cert: {{ lookup('env', 'PUBLIC_CERT') }}"
-    - "private_key: {{ lookup('env', 'PRIVATE_KEY') }}"
+  tasks:
+   - debug:
+      msg:
+      - "api_cert: {{ lookup('env', 'PUBLIC_CERT') }}"
+      - "private_key: {{ lookup('env', 'PRIVATE_KEY') }}"
    
