--- a/Show_variable.yml
+++ b/Show_variable.yml
@@ -8,4 +8,4 @@
       msg:
       - "api_cert: {{ lookup('env', 'PUBLIC_CERT') }}"
       - "private_key: {{ lookup('env', 'PRIVATE_KEY') }}"
-   
+  delegate_to: localhost   
