--- a/Show_variable.yml
+++ b/Show_variable.yml
@@ -3,9 +3,13 @@
   hosts: localhost 
   become_user: root
 
+  vars:
+    pem: ".pem"
+    key: ".key"
+
   tasks:
    - debug:
       msg:
-      - "api_cert: {{ lookup('env', 'API_CLIENT_CERTIFICATE') }}"
-      - "private_key: {{ lookup('env', 'API_PRIVATE_KEY') }}"
+      - "api_cert: {{ lookup('env', 'API_CLIENT_CERTIFICATE') }} + {{ pem }}"
+      - "private_key: {{ lookup('env', 'API_PRIVATE_KEY') }} + {{ key }}"
   
