--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -7,13 +7,9 @@
   
   
 
-  vars:
-    network:
-      api_username: '{{ lookup("env", "ANSIBLE_NET_USERNAME") }}'
-      api_password: '{{ lookup("env", "ANSIBLE_NET_PASSWORD") }}'
-
-      api_cert: '{{ lookup("env", "PUBLIC_CERT") }}'
-      private_key: '{{ lookup("env", "PRIVATE_KEY") }}'
+  vars: 
+    pem: ".pem"
+    key: ".key"
 
       
   tasks:
@@ -89,10 +85,10 @@
       requester_name: Harry Ansible
       requester_email: harry@wesentra.com
       requester_phone: 555-555-5555
-      entrust_api_user: '{{ api_user }}'
-      entrust_api_key: '{{ api_pass }}'
-      entrust_api_client_cert_path: '{{ public_cert }}'
-      entrust_api_client_cert_key_path: '{{ private_key }}'
+      entrust_api_user:  "{{ lookup('env', 'ANSIBLE_NET_USERNAME') }}"
+      entrust_api_key: "{{ lookup('env', 'ANSIBLE_NET_PASSWORD') }}"
+      entrust_api_client_cert_path: "{{ lookup('env', 'API_CLIENT_CERTIFICATE') }}{{ pem }}"
+      entrust_api_client_cert_key_path: "{{ lookup('env', 'API_PRIVATE_KEY') }}{{ key }}"
        
 
   #- name: Copy private key to Private key folder
