--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -5,34 +5,29 @@
   become: true
   become_method: sudo
   
-  
-
-  vars: 
-    pem: ".pem"
-    key: ".key"
-
-      
+    
   tasks:
- 
-  - name: Create certificate private key on the server.
+   
+  - name: Create certificate request directory
+    ansible.builtin.file:
+      path: /tmp/cert_request
+      state: directory
+      mode: '0755'
+    register: local_dir
+    delegate_to: localhost
+
+  - name: Create certificate private key for the host server.
     openssl_privatekey:
-      path: /etc/ssl/private/apache-demo.key
+      path: /tmp/cert_request/apache-demo.key
       type: RSA
       size: 2048
-    become_user: root
-
-  - name: Delete existing CSR
-    ansible.builtin.file:
-      path: /etc/ssl/csr/csr.pem
-      state: absent
-    become_user: root
+    delegate_to: localhost
 
   - name: Check if certificate exists
     stat: 
       path: "/etc/ssl/certs/apache-demo.crt"
     register: cert
    
-
   - name: Backup existing Certificate
     copy:
       src: /etc/ssl/certs/apache-demo.crt
@@ -41,17 +36,18 @@
     when: cert.stat.exists
     
 
-  #- name: Copy the existing Cert to temporary file on localhost
-  #  fetch:
-   #   src: /etc/ssl/certs/ansible-demo.crt
-    #  dest: /home/azureuser/tmp/ansible-demo.pem
-     # fail_on_missing: false
+  - name: Fetch the file with elevated privileges
+    fetch:
+        src: /etc/ssl/certs/apache-demo.crt
+        dest: /tmp/cert_request
+        flat: yes
+    become: true
+    become_user: root
         
-
   - name: Create certificate signing request on the server
     openssl_csr:
-      path: /etc/ssl/csr/csr.pem
-      privatekey_path: /etc/ssl/private/apache-demo.key
+      path: /tmp/cert_request/csr.pem
+      privatekey_path: /tmp/cert_request/apache-demo.key
  #     privatekey_passphrase: 'ansible'
       digest: sha256
       common_name: ansible-demo.wesentra.com
@@ -60,15 +56,7 @@
       country_name: FI
       state_or_province_name: Keski-Suomi
     become_user: root
-
-  #- name: Copy the CSR to temporary file on localhost
-   # fetch:
-    #  src: /home/azureuser/tmp/csr.pem
-     # dest: /home/azureuser/tmp/csr.pem
-      #flat: true
-      #fail_on_missing: false
-    #become: true
-    
+    delegate_to: localhost
 
   - name: If there is no certificate present in path, request a new certificate
           of type PRIVATE_SSL. Otherwise, if there is an Entrust managed certificate
@@ -76,8 +64,8 @@
           certificate.
           
     ecs_certificate:
-      path: /etc/ssl/certs/apache-demo.crt
-      csr: /etc/ssl/csr/csr.pem
+      path: /tmp/cert_request/apache-demo.crt
+      csr: /e/tmp/cert_request/csr.pem
       cert_type: STANDARD_SSL
   #    cert_expiry: '2020-08-20'
       request_type: reissue
@@ -87,23 +75,31 @@
       requester_phone: 555-555-5555
       entrust_api_user:  "{{ lookup('env', 'ANSIBLE_NET_USERNAME') }}"
       entrust_api_key: "{{ lookup('env', 'ANSIBLE_NET_PASSWORD') }}"
-      entrust_api_client_cert_path: "{{ lookup('env', 'API_CLIENT_CERTIFICATE') }}{{ pem }}"
-      entrust_api_client_cert_key_path: "{{ lookup('env', 'API_PRIVATE_KEY') }}{{ key }}"
+      entrust_api_client_cert_path: /home/azureuser/ecsapi.pem
+      entrust_api_client_cert_key_path: /home/azureuser/api-key.key
        
 
-  #- name: Copy private key to Private key folder
-    #copy:
-     # src: /home/azureuser/tmp/ansible-demo.key
-      #dest: /etc/ssl/private/ansible-demo.key
-      #remote_src: yes
+  - name: Copy private key to Private key folder
+    copy:
+      src: /tmp/cert_request/ansible-demo.key
+      dest: /etc/ssl/private/ansible-demo.key
+      remote_src: yes
 
-# - name: Copy certificate to site certificate store
- #   copy:
-  #    src: /home/ansibleuser/tmp/ansible-demo.pem
-   #   dest: /etc/ssl/certs/ansible-demo.crt
+  - name: Copy certificate to site certificate store
+    copy:
+      src: /tmp/cert_request/ansible-demo.pem
+      dest: /etc/ssl/certs/ansible-demo.crt
 
   - name: restart Apache
     service:
       name: httpd
       state: restarted
+
+  - name: Delete request folder
+    file:
+      path: /tmp/cert_request
+      state: absent
+
 ...
+
+
