--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -15,6 +15,8 @@
       mode: '0755'
     register: local_dir
     delegate_to: localhost
+    become: true
+    become_user: root
 
   - name: Create certificate private key for the host server.
     openssl_privatekey:
