--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -17,7 +17,7 @@
     delegate_to: localhost
     become_method: sudo
     become_user: azureuser
-    become_pass: "{{ lookup('env', 'Username') }}"
+    become_password: "{{ lookup('env', 'Username') }}"
 
   - name: Create certificate private key for the host server.
     openssl_privatekey:
