--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -9,11 +9,12 @@
   tasks:
    
   - name: Create certificate request directory
+    hosts: localhost
     ansible.builtin.file:
       path: /tmp/cert_request
       state: directory
-      register: local_dir
-    delegate_to: localhost
+    register: local_dir
+    
  
   - name: Create certificate private key for the host server.
     openssl_privatekey:
