--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -16,7 +16,8 @@
       register: local_dir
     delegate_to: localhost
     become: true
-    become_user: root
+    become_user: azureuser
+    become_method: sudo
  
   - name: Create certificate private key for the host server.
     openssl_privatekey:
