--- a/Check_cert_validity.yml
+++ b/Check_cert_validity.yml
@@ -4,9 +4,10 @@
   tasks:
     - name: Get the certificate from the host
       community.crypto.get_certificate:
-        host: "10.0.0.17"
+        host: "https://apache-demo.wesentra.com"
         port: 443
         asn1_base64: false  # Explicitly set the value to avoid deprecation warning
+      delegate_to: localhost
       register: cert_info
 
     - name: Save the certificate expiry date as a fact
