--- a/Check_cert_validity.yml
+++ b/Check_cert_validity.yml
@@ -1,4 +1,3 @@
-
 - name: Check and save certificate expiry date
   hosts: all
   tasks:
@@ -9,11 +8,19 @@
         asn1_base64: false  # Explicitly set the value to avoid deprecation warning
       delegate_to: localhost
       register: cert_info
+      failed_when: cert_info is not defined or cert_info.not_after is not defined
 
     - name: Save the certificate expiry date as a fact
       set_fact:
         cert_expiry_date: "{{ cert_info.not_after }}"
+      when: cert_info is defined and cert_info.not_after is defined
 
     - name: Display the saved expiry date
       ansible.builtin.debug:
         msg: "The certificate expires on {{ cert_expiry_date }}"
+      when: cert_info is defined and cert_info.not_after is defined
+
+    - name: Certificate does not exist
+      ansible.builtin.debug:
+        msg: "The certificate does not exist or could not be retrieved."
+      when: cert_info is not defined or cert_info.not_after is not defined
