--- a/Check_cert_validity.yml
+++ b/Check_cert_validity.yml
@@ -1,6 +1,9 @@
 - name: Check and save certificate expiry date
   hosts: all
   tasks:
+    - name: Ping the host to ensure it is online
+      ansible.builtin.ping:
+
     - name: Get the certificate from the host
       community.crypto.get_certificate:
         host: "apache-demo.wesentra.com"
@@ -24,3 +27,8 @@
       ansible.builtin.debug:
         msg: "The certificate expires on {{ cert_expiry_date }}"
       when: cert_info is defined and cert_info.not_after is defined
+
+    - name: Certificate does not exist or could not be retrieved
+      ansible.builtin.debug:
+        msg: "The certificate does not exist or could not be retrieved."
+      when: cert_info is not defined or cert_info.not_after is not defined
