--- a/Update_host.yml
+++ b/Update_host.yml
@@ -1,7 +1,10 @@
 ---
 - name: Update and upgrade apt packages
   hosts: all
-  become: yes
+  gather_facts: yes
+  become: true
+  become_method: sudo
+  
   tasks:
     - name: Update apt package index
       apt:
