--- a/Reissue_Certificate.yml
+++ b/Reissue_Certificate.yml
@@ -2,8 +2,7 @@
 - name: Reissue Certificate
   hosts: all
   gather_facts: yes
-  become_user: azureuser
-  become_method: sudo
+  become: true
 
   tasks:
 
